--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <h1>Formulario de registro</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda odit dicta repellendus error praesentium! Rem ipsam illum enim quos explicabo quam illo cum quaerat, ipsum inventore culpa. Doloremque, labore adipisci!</h2>
+<div>
+    <div class="container">
 <form action="dos.html" method="get">
     <p>
         <label for="Nombre">Nombre:</label>
@@ -40,5 +44,7 @@
     </p>
 
 </form>
+</div>
+</div>
 </body>
 </html>
